Store code from file in BoundCodeProperty in case of build error for editing / fixing.